# NND

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt  setup_linux.sh  setup_windows.bat
.github/workflows/: pages.yml  publish.yml  publish_pypi.yml  test.yml
docs/: api.rst  conf.py  features.rst  index.rst
docs/API/: api.rst  api_test.rst
information/diagrams/: generate-diagrams.sh  graphical_abstract.md  nnunet.md  yolo.md
information/experiments_analysis/: SAES_tutorial.ipynb  SAES_tutorial.tex  metrics.csv  nnUNet.csv  yolo.csv  yolo_nnUNet.csv
neuro_disease_detector/: .gitignore  __init__.py  extract_dataset.py  process_dataset.py  scan.py  train_validation.py
neuro_disease_detector/data_processing/: extract_dataset.py  process_dataset.py
neuro_disease_detector/models/: metrics.csv  model_study.csv  models_pipeline.py
neuro_disease_detector/models/nnUNet/: __init__.py  download.py  nnUNet_pipeline.py
neuro_disease_detector/models/nnUNet/config/: dataset.json  splits_final.json
neuro_disease_detector/models/yolo/: __init__.py  extra.py  process_dataset.py  train_augm.py  validation_consensus.py  yolo_pipeline.py
neuro_disease_detector/models/yolo/utils/: utils_nifti.py
neuro_disease_detector/neuro_training/: __init__.py  cross_validation.py  scan.py  segmentation_consesus.py  segmentation_test.py  show_validation.py  test_metrics.py  train_neuro_system.py  train_validation.py  validation_metrics.py
neuro_disease_detector/neuro_training/k_fold_configs/: MSLesSeg_Dataset-5.yaml
neuro_disease_detector/nnu_net/: __init__.py  dataset.json  nnUNet_pipeline.py  script.py  splits_final.json  utils.py  utils2.py  visualize_segmentation.ipynb
neuro_disease_detector/nnu_net/config/: dataset.json  splits_final.json
neuro_disease_detector/utils/: utils_dataset.py  utils_training.py  utils_visualization.py
neuro_disease_detector/yolo/: __init__.py  extra.py  process_dataset.py  train_augm.py  validation_consensus.py  yolo_pipeline.py
neuro_disease_detector/yolo/data_processing/: extract_dataset.py  process_dataset.py
neuro_disease_detector/yolo/neuro_training/: __init__.py  cross_validation.py  segmentation_consesus.py  segmentation_test.py  show_validation.py  train_neuro_system.py
neuro_disease_detector/yolo/utils/: utils_dataset.py  utils_nifti.py
nnd/: .gitignore  __init__.py  logger.py
nnd/models/: models_pipeline.py
nnd/models/nnUNet/: nnUNet_pipeline.py
nnd/models/nnUNet/config/: dataset.json
nnd/models/yolo/: predict.py  process_dataset.py  train_augm.py  validation_consensus.py  yolo_pipeline.py
nnd/utils/: utils_dataset.py
notebooks/: ViewConsensusResults.ipynb  data.csv  example1.ipynb  final_30.csv  metrics.csv  multiobjective_optimization copy.ipynb  multiobjective_optimization.html  multiobjective_optimization.ipynb  visualize_segmentation.ipynb
notebooks/predict/: visualize_segmentation.ipynb
notebooks/results/: experimental_results.ipynb  nnUNet.csv  yolo.csv  yolo_nnUNet.csv
picasso/: download.sh  experiments.sh
src/: Makefile  app.py  dataset.py  docker-compose.yml  script.ipynb  script.py
src/MRI_system/: script.ipynb  script.py
src/backend/: .gitignore  Dockerfile  app.py  requirements.txt
src/backend/MRI_system/: MSLesSeg_Dataset-1.yaml  MSLesSeg_Dataset-2.yaml  MSLesSeg_Dataset-3.yaml  MSLesSeg_Dataset-4.yaml  MSLesSeg_Dataset-5.yaml  MSLesSeg_Dataset-a.yaml  MSLesSeg_Dataset-b.yaml  process_dataset.py  scan.py  script.ipynb  script.py  train_validation.py
src/backend/MRI_system/k_fold_configs/: MSLesSeg_Dataset-1.yaml  MSLesSeg_Dataset-2.yaml  MSLesSeg_Dataset-3.yaml  MSLesSeg_Dataset-4.yaml  MSLesSeg_Dataset-5.yaml
src/frontend/: .env  .gitignore  Dockerfile  astro.config.mjs  package.json
src/frontend/src/components/: AboutProject.astro  App.astro  Header.astro
src/frontend/src/layouts/: Layout.astro
src/frontend/src/pages/: index.astro
src/frotend/: astro.config.mjs  package.json
src/frotend/src/components/: App.astro  Footer.astro
tests/test_data_processing/: test_extract_dataset.py
tests/test_neuro_training/: test_cross_validation.py  test_segmentation_consensus.py
