[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "neuro-desease-detector"
version = "1.0.0"
description = "Python library designed to analyze and detect the sclerosis from MRI brain scans using advanced deep learning algorithms"
readme = "README.md"
authors = [
    {name = "Emilio Rodrigo Carreira Villalta", email = "emiliorodrigo.ecr@gmail.com"}
]

maintainers = [
    {name = "Emilio Rodrigo Carreira Villalta", email = "emiliorodrigo.ecr@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10"
]
requires-python = ">=3.8"