[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["*.pyc", "*.log", ".git", "*Dataset", "*Dataset-a", "dist", "venv", "*__pycache__*", "*yolo*", "*runs", "*k_fold_configs", "*nnUNet_raw*", "*nnUNet_preprocessed*", "*nnUNet_results*", "*nnUNet*"]

[project]
name = "neuro-disease-detector"
version = "1.0.0"
dependencies = [
    "nnunetv2==2.3.1",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "torchaudio==2.3.1",
    "ultralytics==8.3.7",
    "pycocotools==2.0.8",
    "opencv-python==4.10.0.84",
    "gdown==5.2.0",
    "emoji==2.12.1",
    "nibabel==5.2.1",
    "matplotlib==3.9.2",
    "jupyterlab==4.2.5",
    "opencv-contrib-python==4.10.0.84",
    "matplotlib==3.9.2",
    "scipy==1.14.1",
    "ipywidgets==8.1.5",
    "scikit-image==0.24.0",
    "ipympl==0.9.4",
    "flask==3.0.3",
    "flask_cors==5.0.0",
    "ruff==0.6.9",
    "sphinx==8.1.3",
    "sphinx_rtd_theme==3.0.2",
    "ipython==8.30.0",
    "coverage==7.6.8",
]
description = "Python library designed to analyze and detect the sclerosis from MRI brain scans using advanced deep learning algorithms"
readme = "README.md"
authors = [
    {name = "Emilio Rodrigo Carreira Villalta", email = "emiliorodrigo.ecr@gmail.com"}
]

maintainers = [
    {name = "Emilio Rodrigo Carreira Villalta", email = "emiliorodrigo.ecr@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10"
]
requires-python = ">=3.8"

[project.optional-dependencies]
docs = [
    "sphinx==8.1.3",
    "sphinx_rtd_theme==3.0.2",
    "ipython==8.30.0",
]

test = [
    "torch==2.3.1",
    "torchvision==0.18.1",
    "torchaudio==2.3.1",
    "ultralytics==8.3.7",
    "pycocotools==2.0.8",
    "opencv-python==4.10.0.84",
    "gdown==5.2.0",
    "emoji==2.12.1",
    "nibabel==5.2.1",
    "matplotlib==3.9.2",
    "jupyterlab==4.2.5",
    "opencv-contrib-python==4.10.0.84",
    "matplotlib==3.9.2",
    "scipy==1.14.1",
    "ipywidgets==8.1.5",
    "scikit-image==0.24.0",
    "ipympl==0.9.4",
    "flask==3.0.3",
    "flask_cors==5.0.0",
    "ruff==0.6.9",
    "coverage==7.6.8",
]