[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["*.pyc", "*.log", ".git", "*Dataset", "*Dataset-a", "dist", "venv", "*__pycache__*", "*yolo*", "*runs", "*k_fold_configs", "*nnUNet_raw*", "*nnUNet_preprocessed*", "*nnUNet_results*", "*nnu_net*", "*YOLO*", "*yolo_trainings*"]

[project]
name = "neuro-disease-detector"
version = "1.0.0"
dependencies = [
    "nnunetv2==2.3.1",
    "gdown==5.2.0",
    "pandas"
]

description = "Python library designed to analyze and detect the sclerosis from MRI brain scans using advanced deep learning algorithms"
readme = "README.md"

authors = [
    {name = "Emilio Rodrigo Carreira Villalta", email = "emiliorodrigo.ecr@gmail.com"}
]

maintainers = [
    {name = "Emilio Rodrigo Carreira Villalta", email = "emiliorodrigo.ecr@gmail.com"}
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10"
]

